# python-project-lvl4

./: .gitignore  Makefile  README.md  app.json  db.sqlite3  manage.py  pyproject.toml  requirements.txt  requirements.txt.py  setup.cfg
.github/workflows/: pyci.yml
task_manager/: settings.py  tests.py  urls.py  views.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py  0003_alter_label_name.py
task_manager/labels/templates/: delete_label.html  form_create_label.html  form_update_label.html  labels.html
task_manager/labels/tests/: test_forms.py  test_models.py  test_views.py
task_manager/main_app/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/main_app/migrations/: 0001_initial.py  0002_auto_20210717_0719.py  0003_delete_users.py
task_manager/main_app/templates/: base.html  delete_user.html  form.html  home.html  users.html
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_statuses_name.py  0003_rename_statuses_status.py
task_manager/statuses/templates/: delete_status.html  form_create_status.html  form_update_status.html  statuses.html
task_manager/statuses/tests/: test_form.py  (+4 more)
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/templates/: base.html  base1.html  create.html  form_login.html  home.html  index.html  login.html  users.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
(+35 files in other folders)
