[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Evgeny <litun-07@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
